修改项目目录结构

--- a/package.json
+++ b/package.json
@@ -20,7 +20,20 @@
     "idoc": {
         "theme": "handbook",
         "md": [
-            "index.md"
+            "index.md",
+            {
+                "AngularJS": [
+                    "angular-coding.md"
+                ]
+            },
+            {
+                "前端设计思想": []
+            },
+            {
+                "工具使用": [
+                    "how-to-use-readme.md"
+                ]
+            }
         ]
     }
 }
