--- a/package.json
+++ b/package.json
@@ -31,7 +31,12 @@
             },
             {
                 "工具使用": [
-                    "how-to-use-readme.md"
+                    "如何编写GitHub的ReadMe.md"
+                ]
+            },
+            {
+                "CSS": [
+                    "Less与Sass.md"
                 ]
             }
         ]
