更新 Angular2 知识点
更新 Angular2 知识点

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
             {
                 "AngularJS": [
                     "AngularJS 编码规范.md",
-                    "Angular2 Quick Start.md"
+                    "Angular2 知识点.md"
                 ]
             },
             {
