--- a/package.json
+++ b/package.json
@@ -55,6 +55,12 @@
                     "Python 爬虫.md",
                     "Spark.md"
                 ]
+            },
+            {
+                "MQTT": [
+                    "MQTT协议-推送.md",
+                    "MQTT协议-理论.md"
+                ]
             }
         ]
     }
